# ArmorClaw

./: .dockerignore  .env.example  .env.selfhosted  .env.template  .gitattributes  .gitignore  1,  AGENTS.md  ARMORCLAW.md  ArmorChat.md  ArmorClaw.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CONCURRENCY_LIMITS_SUMMARY.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT_LESSONS.md  DEPLOYMENT_SKILLS_REVIEW.md  DOCKER-HUB-HOSTINGER-DEPLOYMENT.md  Dockerfile  Dockerfile.quickstart  GITHUB-ACTIONS-DOCKERHUB-SETUP.md  LICENSE.md  Makefile  PRODUCTION_READINESS.md  README.md  REVIEW.md  ROADMAP.md  SECURITY_AUDIT.md  SKILLS_REVIEW.md  build.gradle.kts  check_bridge.sh  decrypt-test-secrets.sh  deploy.sh  docker-compose-full.yml  docker-compose-stack.yml  docker-compose.bridge.yml  docker-compose.jetski.yml  docker-compose.matrix.yml  (+18 more)
.agent-os/: CLAUDE.md  spec.md  tasks.md
.sisyphus/: boulder.json  omo-integration-docs.md  uat-checklist.md
.skills/: PLATFORM.md  README.md  TEMPLATE.yaml  cloudflare.yaml  deploy.yaml  e2e-deploy.yaml  ops.yaml  provision.yaml  status.yaml
androidApp/: build.gradle.kts  proguard-rules.pro
applications/: ArmorChat-review.md  ArmorTerminal-review.md
applications/ArmorChat/vodozemac/: Cargo.toml  build-android.sh
applications/ArmorChat/vodozemac/src/: lib.rs  megolm.rs  olm.rs  utilities.rs
armorclaw-ui/: build.gradle.kts
bridge/: Dockerfile  Makefile  config.example.toml  go.mod  go.sum  studio  test_skills.go
browser-service/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
configs/: .env.example  Caddyfile.selfhosted  Caddyfile.template  conduit.toml  nginx.conf  nginx.conf.template  providers.json  sygnal.yaml  turnserver.conf
container/: Dockerfile.openclaw  Dockerfile.openclaw-standalone  apparmor-profile  apparmor-profile-office  apparmor-profile-office-java  seccomp-profile.json
deploy/: README.md  SHA256SUMS  SHA256SUMS.example  armorclaw-harden.sh  armorclaw-provision.sh  armorclaw-signing-key.asc  armorclaw.logrotate  backup-settings.sh  bootstrap-admin.py  build-and-push.sh  check-prerequisites.sh  cleanup.sh  container-setup.sh  create-matrix-admin.sh  deploy-all.sh  deploy-infra.sh  deploy-selfhosted.sh  docker-compose.sidecar-java.yml  docker-compose.sidecar-py.yml  harden-final.sh  harden-ssh.sh  health-check.sh  install-bridge.sh  install.sh  installer-v4.sh  installer-v5.sh  installer-v5.sh.sha256  installer-v5.sh.sig  installer-v6.sh  launch-element-x.sh  quickstart-entrypoint.sh  rename-admin.sh  setup-cloudflare.sh  setup-firewall.sh  setup-matrix.sh  setup-quick.sh  setup-ssh-tunnel.sh  setup-wizard.sh  start-local-matrix.sh  verify-bridge.sh  (+4 more)
doc/: 2026-02-10-android-cmp-implementation-plan.md  2026-02-10-documentation-update-summary.md  2026-02-10-feature-navigation-analysis.md  2026-02-10-final-completion-summary.md  2026-02-10-final-progress-summary.md  2026-02-10-final-project-summary.md  2026-02-10-implementation-progress.md  2026-02-10-mobile-app-gap-analysis.md  2026-02-10-mobile-app-summary.md  2026-02-10-mobile-offline-sync-spec.md  2026-02-10-mobile-onboarding-wireframes.md  2026-02-10-mobile-security-implementation.md  2026-02-10-mobile-sprint-plan.md  2026-02-10-navigation-gap-fixes-summary.md  2026-02-10-phase1-completion-summary.md  2026-02-10-phase2-completion-summary.md  2026-02-10-phase2-progress.md  2026-02-10-phase2-test-build-final-summary.md  2026-02-10-phase2-test-build-fixes.md  2026-02-10-phase2-test-build-summary.md  2026-02-10-phase3-completion-summary.md  2026-02-10-phase4-completion-summary.md  2026-02-10-phase5-completion-summary.md  2026-02-10-phase6-completion-summary.md  2026-02-10-project-progress-summary.md  2026-02-10-test-build-summary.md  2026-roadmap-analysis.md  (+32 more)
rust-vault/: .gitignore  Cargo.toml  Dockerfile  build.rs
rust-vault/proto/: governance.proto
rust-vault/src/: config.rs  error.rs  lib.rs  main.rs
rust-vault/src/blindfill/: cdp_interceptor.rs  integration.rs  mod.rs  placeholder.rs
rust-vault/src/db/: matrix_state.rs  mod.rs  pool.rs  vault.rs
rust-vault/src/governance/: ephemeral.rs  event_notifier.rs  mod.rs
rust-vault/src/grpc/: governance.rs  governance_service.rs  mod.rs  server.rs
rust-vault/src/grpc/middleware/: auth.rs  mod.rs
rust-vault/tests/: blindfill_integration_test.rs  cdp_interceptor_test.rs  config_test.rs  db_pool_test.rs  error_test.rs  generate_test_certs.sh  governance_service_test.rs  grpc_server_test.rs  integration_test.rs  matrix_state_test.rs  mtls_auth_test.rs  placeholder_test.rs  vault_test.rs
rust-vault/tests/certs/: ca.crt  client.crt  expired-client.crt  invalid-client.crt  server.crt
sidecar/: Cargo.toml  FIXES_SUMMARY.md  GRPC_VERIFICATION.md  IMPLEMENTATION_STATE.md  IMPLEMENTATION_SUMMARY.md  README.md  build-release.sh  build.rs
sidecar/src/: config.rs  error.rs  lib.rs  main.rs  reliability.rs
sidecar/src/connectors/: aws_s3.rs  azure_blob.rs.disabled  connector.rs  mod.rs  sharepoint.rs
sidecar/src/document/: convert.rs  diff.rs  docx.rs  docx_diff.rs  embeddings.rs  html_diff.rs  mod.rs  ocr.rs  pdf.rs  pptx.rs  qdrant.rs  rag.rs  xlsx.rs
sidecar/src/encryption/: aead.rs
sidecar/src/grpc/: interceptor.rs  mod.rs  server.rs
sidecar/src/grpc/middleware/: concurrency.rs.bak  integration_example.rs.bak  mod.rs  rate_limit.rs
sidecar/src/grpc/proto/: armorclaw.sidecar.v1.rs  mod.rs  sidecar.proto
sidecar/src/output/: pdf.rs
sidecar/src/provenance/: signer.rs
sidecar/src/security/: mod.rs  shadowmap.rs  token.rs
sidecar/src/split_storage/: manager.rs
sidecar/src/utils/: mod.rs
sidecar/tests/: S3_INTEGRATION_TESTS.md  aws_s3_integration_test.rs  document_integration_test.rs  e2e_integration_test.rs  e2e_test.rs  s3_integration_test.rs  security_interceptor_integration_test.rs  shadowmap_test.rs
sidecar/tests/testdata/: sample.docx  sample.txt  sample.xlsx
(+1796 files in other folders)
