[package]
name = "rust-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
zeroize = "1.8"
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
x509-parser = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
chrono = "0.4"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.8"
tracing-test = "0.2"

[build-dependencies]
tonic-build = "0.10"
