[package]
name = "armorclaw-sidecar"
version = "0.0.1"
edition = "2021"
authors = ["ArmorClaw Engineering <eng@armorclaw.com>"]
description = "High-performance data plane for ArmorClaw enterprise operations"
license = "MIT"

[dependencies]
# Async Runtime (exclude native-tls to use rustls instead)
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "fs", "process", "signal", "macros"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Middleware
tower = { version = "0.4", features = ["limit", "timeout", "buffer", "util"] }
tower-http = { version = "0.5", features = ["trace"] }

# Cloud SDKs (Phase 1: S3 only)
aws-sdk-s3 = "1.10"
aws-config = "1.1"
aws-credential-types = "1.1"

# HTTP Client (for future connectors)
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.2" }
reqwest-retry = { version = "0.3" }

# Async trait support
async-trait = "0.1"

# Qdrant client (Phase 2)
qdrant-client = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Document Processing (Phase 1: PDF and DOCX only)
lopdf = "0.34"
docx-rs = "0.4"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Streaming
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"

# Configuration
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost", "cleanup-markdown"] }
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.9"
mockall = "0.12"
wiremock = "0.5"

[[bin]]
name = "armorclaw-sidecar"
path = "src/main.rs"

[features]
default = ["full-connectors"]
full-connectors = []
